fixed styling issues. search bar being too wide. scrolling was off in the wrong areas

--- a/src/app/[locale]/Home.css
+++ b/src/app/[locale]/Home.css
@@ -3,9 +3,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    min-height: max-content;
     background-color: rgb(243 244 246);
     width: 100%;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+    overflow-y: scroll;
 }
 
 .homeHeader {
