--- a/src/app/[locale]/about/About.css
+++ b/src/app/[locale]/about/About.css
@@ -3,9 +3,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    height: 100%;
+    overflow-y: scroll;
     background-color: rgb(243 244 246);
     width: 100% !important;
+    margin: auto;
 }
 
 .aboutHeader {
