--- a/src/app/[locale]/addSoldier/addSoldier.css
+++ b/src/app/[locale]/addSoldier/addSoldier.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: center;
     padding-top: 2.5rem;
-    min-height: 100vh;
+    padding-bottom: 2.5rem;
+    overflow-y: scroll;
     background-color: rgb(243 244 246);
     width: 100%;
 }
