--- a/src/app/[locale]/admin/Admin.css
+++ b/src/app/[locale]/admin/Admin.css
@@ -3,6 +3,8 @@
     margin-left: auto;
     margin-right: auto;
     padding: 1.5rem 1rem;
+    height: 100%;
+    overflow-y: scroll;
 }
 
 .adminHeader {
