--- a/src/components/layout/Sidebar.css
+++ b/src/components/layout/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebarContainer {
-    width: 15%;
+    max-width: fit-content;
     background-color: rgb(55 65 81);
     padding: 1rem;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
